# Gomoku

./: .gitignore  pyproject.toml
gomoku/: game_core.py
tests/: test_gomoku.py
